# mineria-autonomo

sentimind_project/: DOCUMENTACION.md
sentimind_project/backend/: evaluate_model.py  pyproject.toml
sentimind_project/backend/authentication/: __init__.py  models.py  serializers.py  urls.py  views.py
sentimind_project/backend/core/: models.py
sentimind_project/backend/core/application/: ai_service.py
sentimind_project/backend/core/infrastructure/: serializers.py  views.py
sentimind_project/backend/core/migrations/: 0003_post_author_alter_post_content.py
sentimind_project/backend/data/: db.sqlite3
sentimind_project/backend/sentimind/: settings.py  urls.py
sentimind_project/frontend/: package-lock.json  package.json
sentimind_project/frontend/src/: App.css  App.tsx  index.css
sentimind_project/frontend/src/adapters/: authAdapter.ts  postAdapter.ts
sentimind_project/frontend/src/components/: FilterBar.tsx  Navbar.tsx  PostCard.tsx  PostInput.tsx  ProtectedRoute.tsx
sentimind_project/frontend/src/contexts/: AuthContext.tsx
sentimind_project/frontend/src/pages/: ForgotPassword.tsx  Home.tsx  Login.tsx  Register.tsx
sentimind_project/frontend/src/utils/: constants.ts
